Add ldapnomnom and refactor

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: OSCP/eCPPTv3 notes
+site_name: OSCP/eCPPTv3 Notes
 site_description: My OSCP and eCPPTv3 exam notes
 site_url: https://krovs.github.io/oscp-notes
 
